--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,80 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
 
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal">
 
-    <LinearLayout
-        android:id="@+id/linearLayout"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:baselineAligned="false"
+    <include layout="@layout/content_main" />
 
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <ListView
-            android:id="@+id/lsMyShops"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight=".5" />
-
-        <ListView
-            android:id="@+id/lsMailShops"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight=".5" />
-
-        <ListView
-            android:id="@+id/lsCoicidence"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight=".5">
-
-        </ListView>
-
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/linearLayout2"
-        android:layout_width="match_parent"
-        android:layout_height="37dp"
-        android:layout_weight=".5"
-        android:orientation="horizontal">
-
-        <Button
-            android:id="@+id/btnEnterData"
-            style="@style/Widget.AppCompat.Button.Colored"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Enter Data" />
-
-        <Button
-            android:id="@+id/btnProcessData"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Process Data" />
-
-        <Button
-            android:id="@+id/btnClearAll"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Clear variables" />
-
-        <Button
-            android:id="@+id/btnSave"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="save result" />
-    </LinearLayout>
-</LinearLayout>
+</android.support.constraint.ConstraintLayout>
 
 
 
