--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -19,31 +19,31 @@
         <Button
             android:id="@+id/btnEnterData"
             style="@style/Widget.AppCompat.Button.Colored"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="Enter Data" />
 
         <Button
             android:id="@+id/btnProcessData"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="Process Data" />
 
         <Button
-            android:id="@+id/btnClearAll"
-            android:layout_width="wrap_content"
+            android:id="@+id/btnLoad"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Clear variables" />
+            android:text="@string/clear_variables" />
 
         <Button
             android:id="@+id/btnSave"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="save result" />
+            android:text="@string/save_result" />
     </LinearLayout>
 
     <LinearLayout
