--- a/app/src/main/res/layout/activity_datafinder.xml
+++ b/app/src/main/res/layout/activity_datafinder.xml
@@ -2,9 +2,11 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/clDataFind"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    >
 
 
     <android.support.constraint.ConstraintLayout
@@ -16,7 +18,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0">
+        app:layout_constraintVertical_bias="0.0"
+        >
 
         <Button
             android:id="@+id/btnLoadMyShops"
@@ -25,7 +28,8 @@
             android:layout_marginTop="8dp"
             android:layout_weight=".5"
             android:text="ShopList Process"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            />
 
         <EditText
             android:id="@+id/myShopText"
@@ -38,7 +42,8 @@
             android:inputType="text"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/btnLoadMyShops" />
+            app:layout_constraintTop_toBottomOf="@+id/btnLoadMyShops"
+            />
 
         <TextView
             android:id="@+id/tvShops"
@@ -53,7 +58,8 @@
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/myShopText"
-            tools:text="@string/instruction" />
+            tools:text="@string/instruction"
+            />
 
     </android.support.constraint.ConstraintLayout>
 
@@ -71,7 +77,8 @@
         app:layout_constraintHorizontal_weight="2"
         app:layout_constraintStart_toEndOf="@+id/llMyShops"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0">
+        app:layout_constraintVertical_bias="0.0"
+        >
 
         <EditText
             android:id="@+id/mailText"
@@ -80,14 +87,16 @@
             android:layout_marginTop="8dp"
             android:hint="@string/read_sorce"
             android:inputType="textPersonName"
-            app:layout_constraintTop_toBottomOf="@+id/btnLoadMailList" />
+            app:layout_constraintTop_toBottomOf="@+id/btnLoadMailList"
+            />
 
         <Button
             android:id="@+id/btnLoadMailList"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight=".5"
-            android:text="MailList Process" />
+            android:text="MailList Process"
+            />
 
         <TextView
             android:id="@+id/tvMailList"
@@ -101,7 +110,8 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/mailText" />
+            app:layout_constraintTop_toBottomOf="@+id/mailText"
+            />
     </android.support.constraint.ConstraintLayout>
 
 </android.support.constraint.ConstraintLayout>
