--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -18,12 +18,14 @@
 
         <Button
             android:id="@+id/btnEnterData"
-            style="@style/Widget.AppCompat.Button.Colored"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:text="@string/enter_data"
-            android:textSize="10sp" />
+            android:textAppearance="@style/TextAppearance.AppCompat"
+
+            android:textSize="11sp"
+            />
 
         <Button
             android:id="@+id/btnProcessData"
@@ -31,7 +33,10 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:text="@string/process_data"
-            android:textSize="10sp" />
+            android:textAppearance="@style/TextAppearance.AppCompat"
+            android:textSize="11sp"
+            style="@style/Widget.AppCompat.Button"
+            />
 
         <Button
             android:id="@+id/btnLoad"
@@ -39,7 +44,9 @@
             android:layout_height="match_parent"
             android:layout_weight="2"
             android:text="@string/clear_variables"
-            android:textSize="10sp" />
+            android:textAppearance="@style/TextAppearance.AppCompat"
+            android:textSize="11sp"
+            />
 
         <Button
             android:id="@+id/btnSave"
@@ -47,7 +54,9 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:text="@string/save_result"
-            android:textSize="10sp" />
+            android:textAppearance="@style/TextAppearance.AppCompat"
+            android:textSize="11sp"
+            />
     </LinearLayout>
 
     <LinearLayout
